# environment

./: .Xmodmap  .Xresources  .bash_profile  .bashrc  .gitconfig  .gitignore  .gitignore_global  .xinitrc  .zshrc  README.md  ls_config.sh  set_config.sh  setup.sh  vs-code-settings.json
.config/Code/User/: settings.json
.config/awesome/: rc.lua
.ipython/profile_default/: ipython_config.py
mk-tools/: pyproject.toml
mk-tools/mk_tools/: aws_set_my_ip.py
